--- a/common.sty
+++ b/common.sty
@@ -52,6 +52,7 @@
 %---------------- Notation ---------------------%
 
 
+
 \newcommand{\Conv}{{\rm Conv}}  %envória convexa
 \newcommand{\mdc}{{\rm mdc}}
 \newcommand{\sgn}{{\rm sgn}}
@@ -66,5 +67,53 @@
 \newcommand{\arctg}{{\rm arctg}}
 \newcommand{\arcsen}{{\rm arcsen}}
 \newcommand{\dropsign}[1]{\smash{\llap{\raisebox{-.5\normalbaselineskip}{$#1$\hspace{2\arraycolsep}}}}}%divisão polinomial
+
+
 \newcommand{\negrito}[1]{\mbox{\boldmath{$#1$}}} 
+
+
+
+
+%Espaço dos operadores lineares de #1 (tem várias coisas que podem ser #1)
+% Exemplo: \Lin{V,W}
+\newcommand{\Lin}[1]{\mathcal{L}(#1)}
+
+% Núcleo de uma Transformação linear
+% Exemplo: \Ker(T)
+\DeclareMathOperator{\Ker}{Ker}
+% Imagem de uma Transformação linear
+% Exemplo: \Im(T)
+\DeclareMathOperator{\Im}{Im}
+
+% Restrição da função #1 ao conjunto #2
+% Exemplo: \rest{T}{W}
+\newcommand{\rest}[2]{#1_{\upharpoonright #2}}
+
+% Conjunto dos números reais
+% Exemplo: \Reals
+\newcommand{Reals}{\mathbb{R}}
+
+% Conjunto dos números Inteiros
+% Exemplo: \Integers
+\newcommand{\Integers}{\mathbb{Z}}
+
+% Conjunto dos números Racionais
+% Exemplo: \Rationals
+\newcommand{\Rationals}{\mathbb{Q}}
+
+% Conjunto dos números Naturais
+% Exemplo: \Naturals
+\newcommand{\Naturals}{\mathbb{N}}
+
+% Conjunto dos números Complexos
+% Exemplo: \Complex
+\newcommand{\Complex}{\mathbb{C}}
+
+% Conjunto das Matrizes de dimensão #1 com coeficientes em #2
+% Exemplo: \m{nxm}{K}
 \newcommand{\m}[2]{\mathcal{M}_{#1}(#2)}
+
+% Produto interno de #1 com #2
+% Exemplo: \iprod{x}{y}
+\newcommand{\iprod}[2]{\langle #1,#2 \rangle}
+
