--- a/common.sty
+++ b/common.sty
@@ -80,10 +80,11 @@
 
 % Núcleo de uma Transformação linear
 % Exemplo: \Ker(T)
-\DeclareMathOperator{\Ker}{Ker}
+%\DeclareMathOperator{\Ker}{Ker}
+
 % Imagem de uma Transformação linear
 % Exemplo: \Im(T)
-\DeclareMathOperator{\Im}{Im}
+%\DeclareMathOperator{\Im}{Im}
 
 % Restrição da função #1 ao conjunto #2
 % Exemplo: \rest{T}{W}
@@ -91,7 +92,7 @@
 
 % Conjunto dos números reais
 % Exemplo: \Reals
-\newcommand{Reals}{\mathbb{R}}
+\newcommand{\Reals}{$\mathbb{R}$}
 
 % Conjunto dos números Inteiros
 % Exemplo: \Integers
