--- a/listas.tex
+++ b/listas.tex
@@ -1048,7 +1048,7 @@ A^{-1} + B^{-1} = (A + B)^{-1}
     %https://math.stackexchange.com/questions/1291083/matrix-with-prime-entries-and-largest-possible-determinant
     }
 \newpage
-\section{\textcolor{Floresta}{Lista 2 (Provável)}}
+\section{\textcolor{Floresta}{Lista 2}}
 
 
 \exercicio{1} Seja $V$ um espaço vetorial sobre um corpo $K$ e $T \in \mathcal{L}(V).$ Sejam $\lambda \in K$ um autovalor de $T$ e $f(t) \in K[t].$ Mostre que $f(\lambda)$ é um autovalor de $f(T).$
@@ -1292,4 +1292,142 @@ Prove que se $A$ é diagonalizável então $T_A$ é diagonalizável.
 
 
 \exercicio{31} 
+
+\newpage
+\section{\textcolor{Floresta}{Lista 2 (Provável)}}
+
+\exercicio{1} Seja
+\[
+A = \begin{bmatrix} 6 & -3 & -2 \\
+4 & -1 & -2 \\
+10 & -5 & -3 
+\end{bmatrix} \in \mathcal{M}_3(\mathbb{R}).
+\]
+Seja $T \in \mathcal{L}(\mathbb{R}^3)$ tal que $[T]_{can} = A.$ Encontre a decomposição primária de $T.$
+  \solucao{}
+  
+  \exercicio{2} Seja $V$ um espaço vetorial de dimensão finita sobre o corpo $K.$ Seja $\mathcal{F}$ uma família de operadores triangularizáveis que comutam. Prove que:
+   \dividiritensdiv{1}{     
+        \task[\pers{a}] Existe um autovetor comum a todos os operadores de $\mathcal{F},$ isto é, existe $v \in V$ não nulo
+tal que, para cada $T \in \mathcal{F}, T(v) = \lambda_Tv,$ para algum $\lambda_T \in K.$
+(\emph{Sugestão:} Use indução na dimensão de $V.$)
+     \task[\pers{b}] Mostre que a família 
+     \[
+     \mathcal{G} = \{T^t \in \mathcal{L}(V^∗) | T \in \mathcal{F} \} 
+\] é uma família de operadores lineares que comutam.
+     \task[\pers{c}] Use o item (a) para obter $f \in V^*$ autovetor comum à família $\mathcal{G}.$ Prove que $\ker f$ é
+invariante sob $T,$ para todo $T \in \mathcal{F}.$
+
+ \task[\pers{d}] Use indução na dimensão de $V$ (e o item (c)) para provar que existe uma base $B$ de $V$ tal que $[T]_B$ é triangular, para todo $T \in \mathcal{F}.$
+ }
+ 
+   \solucao{}
+  
+  \exercicio{3} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V)$ um operador linear que comuta com todo operador diagonalizável de $\mathcal{L}(V).$ Prove que $T$ é um múltiplo escalar do operador identidade.
+  
+    \solucao{}
+  
+  \exercicio{4} Seja $A \in \mathcal{M}_3(\mathbb{R})$ uma matriz não nula tal que $A^3 = −A.$ Mostre que $A$ é semelhante à matriz
+  \[
+  \begin{bmatrix}
+  0 & 0 & 0 \\
+  0 & 0 & -1 \\
+  0 & 1 & 0
+  \end{bmatrix}
+  \]
+  
+      \solucao{}
+  
+  \exercicio{5} Sejam $V$ um $K$-espaço vetorial de dimensão $n$ e $T \in \mathcal{L}(V)$ com polinômio minimal
+\[m_T(t) = p_1(t)^{m_1} \cdot \ldots \cdot p_k(t)^{m_k}, \]
+onde $p_i(t)$ são distintos e irredutíveis em $K[t].$ Seja $V = V_1 \oplus \ldots \oplus V_k$ a decomposição primária de $V,$ isto é, $V_i = \Ker(p_i(T)^{m_i}).$ Seja $W$ um subespaço $T$-invariante de $V.$ Mostre que
+\[W = (W \cap V_1) \oplus \ldots \oplus (W \cap V)k).
+\]
+      \solucao{}
+  
+  \exercicio{6} Sejam $V$ um $K$-espaço vetorial de dimensão $n$ e $T \in \mathcal{L}(V)$ com polinômio característico
+  \[
+p_T(t) = (t − \lambda_1)^{n_1} (t −\lambda_2)^{n_2} \cdot \ldots \cdot  (t − \lambda_k)^{n_k}\]
+e polinômio minimal
+\[m_T(t) = (t − \lambda_1)^{m_1} (t −\lambda_2)^{m_2} \cdot \ldots \cdot  (t − \lambda_k)^{m_k}, \]
+com $\lambda_i$ distintos.
+  \dividiritensdiv{1}{     
+        \task[\pers{a}] Prove que, para cada $i = 1 2, \ldots , k,$ temos que 
+        \[\dim \Ker(T − \lambda_iI)^{m_i} = n_i.\]
+ \task[\pers{b}] Seja
+ \[
+ W_i = \{ v \in V : (T- \lambda_iI)^t(v) = 0, \mbox{ para algum inteiro } r \ge 0 \}.
+ \]
+ Prove que $W_i = \Ker(T-\lambda_iI)^{m_i},$ para todo $i = 1, \ldots, k.$
+        }
+        
+     \solucao{}
+  
+  \exercicio{7}  Seja $N$ um operador linear nilpotente em um espaço vetorial de dimensão finita $n.$ Prove que o polinômio característico de $N$ é $p_N(t) = t^n.$
+  
+      \solucao{}
+  
+  \exercicio{8} Seja $V$ um $K$-espaço de dimensão finita e sejam $T, N \in \mathcal{L}(V)$ tais que $N$ é nilpotente e $TN = NT.$ Prove que
+    \dividiritensdiv{1}{     
+        \task[\pers{a}] $T$ é inversível se, e somente se, $T + N$ é inversível.
+                \task[\pers{b}] $\det(T) = \det(T+N)$ e $P_T(t) = p_{T+N}(t).$
+                }
+      \solucao{}
+  
+  \exercicio{9} Seja
+  \[
+  A = \begin{bmatrix}
+  3 & 1 & -1 \\
+  2 & 2 & -1 \\
+  2 & 2 & 0
+  \end{bmatrix} \in \mathcal{M}_3(\mathbb{R}).
+  \]
+ 
+ Seja $T \in \mathcal{L}(\mathbb{R}^3)$ tal que $[T]_{can} = A.$ Escreva $T = D + N,$ com $D$ diagonalizável, $N$ nilpotente e $DN = ND.$
+ 
+      \solucao{}
+  
+  \exercicio{10} Sejam $A \in \mathcal{M}_n(K)$ e $T_A \colon \mathcal{M}_n(K) \to \mathcal{M}_n(K)$ o operador definido por $T_A(M) = AM − MA.$
+    \dividiritensdiv{1}{     
+        \task[\pers{a}] Prove que se $A$ é nilpotente, então $T_A$ é nilpotente. Vale a recíproca?
+           \task[\pers{b}] Prove que se $K$ é algebricamente fechado e se $T_A$ é diagonalizável, então $A$ é diagonalizável.
+           (\emph{Sugestão}: Para cada matriz $M \in \mathcal{M}_n(K)$ seja $\tilde{M} \in \mathcal{L}(K^n)$ o operador tal que $[\tilde{M}]_{can} = M.$ Seja $v \in K^n$ um autovetor de $\tilde{A}.$ Considere a transformação linear $\varphi \colon \mathcal{M}_n(K) \to K^n$ definida por $\varphi(M) = \tilde{M}(v).$ Prove que $\varphi$ é sobrejetora.)
+           }
+           
+               \solucao{}
+  
+  \exercicio{11} Encontre duas matrizes nilpotentes de ordem $4$ que tenham o mesmo polinômio minimal, mas que não sejam semelhantes.
+         \solucao{
+         Considere as matrizes
+         \[
+         A = \begin{bmatrix}
+         1 & 1 & 3 & 0\\
+         5 & 2 & 6 & 0 \\
+         -2 & -1 & -3 & 8 \\
+         0 & 0 & 0 & 0 \\
+         \end{bmatrix} \quad \mbox{e} \quad         B = \begin{bmatrix}
+         1 & 1 & 3 & 0\\
+         5 & 2 & 6 & 0 \\
+         -2 & -1 & -3 & 0 \\
+         0 & 0 & 0 & 7 \\
+         \end{bmatrix} 
+         \]
+         %https://www2.unifap.br/matematica/files/2017/06/TCC-Teorema-da-Decomposi%c3%a7%c3%a3o-Prim%c3%a1ria.-Max-Oliveira-2010.pdf
+         %https://www.math.ubc.ca/~cass/research/pdf/Nilpotents.pdf
+         %https://books.google.com.br/books?id=e2bV2DQNFQIC&pg=SA4-PA52&lpg=SA4-PA52&dq=nilpotent+matrix+ordere+4&source=bl&ots=PcWj0Ucu3F&sig=ACfU3U3NBx5bXNdpbAuUqeRhcuvlUL4ROQ&hl=pt-BR&sa=X&ved=2ahUKEwip-IfiuankAhVPFLkGHeatDD04FBDoATACegQICBAB#v=onepage&q=nilpotent%20matrix%20ordere%204&f=false
+         
+         }
+         
+
+\newpage
+\section{\textcolor{Floresta}{Lista 4}}
+  \exercicio{1} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V).$
+    \dividiritensdiv{1}{     
+        \task[\pers{a}] Prove que se existe um vetor cíclico para $T$ então todo subespaço próprio $T$-invariante de $V$ também tem um vetor cíclico.
+        \task[\pers{b}] Vale a recíproca do item (a)? (Isto é, se todo subespaço próprio $T$-invariante $W$ de $V$
+tem um vetor cíclico para $T_W,$ é verdade que existe um vetor cíclico para $T$?)
+}
+\solucao{}
+        
+
 \end{document} 
