--- a/common.sty
+++ b/common.sty
@@ -63,13 +63,12 @@
 \newcommand{\cotg}{{\rm cotg}}
 \newcommand{\cossec}{{\rm cossec}}
 \newcommand{\Spec}{{\rm Spec}}
-\newcommand{\Ker}{{\rm Ker}}
 \newcommand{\arctg}{{\rm arctg}}
 \newcommand{\arcsen}{{\rm arcsen}}
 \newcommand{\dropsign}[1]{\smash{\llap{\raisebox{-.5\normalbaselineskip}{$#1$\hspace{2\arraycolsep}}}}}%divisão polinomial
 
 
-\newcommand{\negrito}[1]{\mbox{\boldmath{$#1$}}} 
+\newcommand{\negrito}[1]{\mbox{\boldmath{#1}}} 
 
 
 
@@ -83,7 +82,7 @@
 \DeclareMathOperator{\Ker}{Ker}
 % Imagem de uma Transformação linear
 % Exemplo: \Im(T)
-\DeclareMathOperator{\Im}{Im}
+%\DeclareMathOperator{\Im}{Im}
 
 % Restrição da função #1 ao conjunto #2
 % Exemplo: \rest{T}{W}
