--- a/main.tex
+++ b/main.tex
@@ -1,19 +1,18 @@
-\PassOptionsToPackage{dvipsnames}{xcolor}
+%%% ------- Readme -------%%%
 
+
+
+%%%-----------------------%%%
 \documentclass[11pt,twoside,a4paper]{book}
-
 \usepackage{estilos} %Relacionado ao arquivo estilos.sty com os packages usados
 \makeindex
 \title{Álgebra Linear \\  Douglas Smigly}
 \author{MAT5730}
 \date{2º semestre de 2019}
-
 \begin{document}
-
 \maketitle
-
+\newpage
 \tableofcontents
-
 \newpage
 
 \chapter{Espaços vetoriais}
