--- a/common.sty
+++ b/common.sty
@@ -79,7 +79,7 @@
 
 % Núcleo de uma Transformação linear
 % Exemplo: \Ker(T)
-%\DeclareMathOperator{\Ker}{Ker}
+\DeclareMathOperator{\Ker}{Ker}
 
 % Imagem de uma Transformação linear
 % Exemplo: \Im(T)
@@ -91,7 +91,7 @@
 
 % Conjunto dos números reais
 % Exemplo: \Reals
-\newcommand{\Reals}{$\mathbb{R}$}
+\newcommand{\Reals}{\mathbb{R}}
 
 % Conjunto dos números Inteiros
 % Exemplo: \Integers
