Update on Overleaf.

--- a/estilosexercicios.sty
+++ b/estilosexercicios.sty
@@ -35,7 +35,7 @@
 \newtheorem{teorema}{Teorema}
 \setlength{\parindent}{0pt}
 \newcommand{\Nil}{\mathrm{Nil }}
-
+\newcommand{\tr}{\mathrm{tr }}
 
 \usepackage[framemethod=TikZ]{mdframed}
 \usepackage{lipsum}
