--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 
 
 
-%%%-----------------------%%%
+%%-----------------------%%%
 \documentclass[11pt,twoside,a4paper]{book}
 \usepackage{estilos} %Relacionado ao arquivo estilos.sty com os packages usados
 \makeindex
@@ -14,6 +14,51 @@
 \newpage
 \tableofcontents
 \newpage
+\newpage
+\chapter*{Infromações da Disciplina}
+\label{sec:intro}
+\addcontentsline{toc}{section}{\nameref{sec:intro}}
+\question{Informações Básicas}\label{new-question}
+
+Essas são as notas de aula de Álgebra Linear(MAT5730), as aulas acontecem na sala B-134 às terças 10h e às quintas 8h.
+
+
+\question{Informações do Professor}
+
+O professor é o Ivan Shestakov, sua sala é a 290-A e o seu e-mail é shestak@ime.usp.br
+
+\question{Bibliografia}
+\nocite{*}
+\bibliographystyle{plain}
+\bibliography{samples}
+\question{Avaliação}
+
+A nota final da disciplina será a média aritimética de P1, P2, e P3. Todos os
+alunos poderão fazer a prova sub para substituir a menor das suas notas (Sub
+aberta). As datas das provas são as seguintes:
+
+\begin{table}[h!]
+  \begin{center}
+    
+    \label{tab:table1}
+    \begin{tabular}{l|r} % <-- Alignments: 1st column left, 2nd middle and 3rd right, with vertical lines in between
+      \textbf{Prova} & \textbf{Data}\\
+      \hline
+      P1 & 10-09\\
+      P2 & 15-10\\
+      P3 & 12-11\\
+      SUB & 19-11
+    \end{tabular}
+  \end{center}
+\end{table}
+
+\question{Outras Informações}
+\begin{enumerate}[label=(\roman*)]
+\item Teremos listas, que não contarão para a nota
+\item As listas serão publicadas em 
+\item Não haverá monitoria
+\end{enumerate}
+\newpage 
 
 \chapter{Espaços vetoriais}
 
@@ -22,16 +67,21 @@ Durante este capítulo, sempre adotaremos $K$ como sendo um corpo qualquer.
 \section{Base e Dimensão}
 
 \begin{definicao}\index{Espaço Vetorial!Base}
-Seja $V \neq 0$ um espaço vetorial sobre um corpo $K$. Um subconjunto $B\subseteq V$ chama-se uma \textbf{base} de $V$ se:
-\begin{itemize}
-\item $B$ é linearmente independente.
+Seja $V \neq 0$ um espaço vetorial sobre um corpo $K$. Uma \emph{base} de \(V\) é um conjunto $B\subseteq V$ tal que:
+\begin{enumerate}[label=(\roman*)]
+\item $B$ é linearmente independente (LI).
 \item $B$ gera $V$.
-\end{itemize}
+\end{enumerate}
 \end{definicao}
-Lembramos aqui que $B$ é linearmente independente se todo subconjunto finito de $B$ é linearmente independente, ou seja
+Lembramos aqui que $B$ é linearmente independente se todo subconjunto finito
+$I\subseteq B$ é linearmente independente. Isto é, se \(\alpha\colon I\to\Reals\) e
 \[
-\sum\limits_{\substack{J \subseteq I \\ \abs{J} < \aleph_0}} \alpha_j v_j = 0, \ \alpha_j \in K, v_j \in B \Rightarrow \alpha_j = 0 \ \forall j \in J 
-\]
+\sum_{b\in I} \alpha_bb = 0,
+ \text{ então } \alpha_j = 0 \ \text{ para cada 
+} j \in J.\] 
+Além disso, dizemos que \(B\) gera \(V\) se para cada \(v\in V\) existem exatamente
+um subconjunto finito \(I_v\subseteq B\) e uma função \(\alpha\colon
+I_v\to\Reals\) tais que \[v=\sum_{b\in I_v}\alpha_bb.\]  
 \begin{teorema}
 Seja $V$ um espaço vetorial e sejam $I\subseteq V$ linearmente independente e $S\subseteq V$ gerador de $V$ tais que $I\subseteq S$. Então existe uma base $B$ de $V$ tal que \[I\subseteq B\subseteq S.\]
 \end{teorema}
