--- a/estilos.sty
+++ b/estilos.sty
@@ -43,11 +43,30 @@
 \fancyhead[L]{\leftmark}
 \fancyhead[R]{\rightmark}
 \fancyfoot[C]{\thepage}
+ \usepackage{todonotes} % Required for the boxes that questions appear in
+
+
+% Create the command used for questions
+
+\newcommand{\question}[1] % This is what you will use to create a new question
+{
+\par\noindent % Creates a new unindented paragraph
+\phantomsection % Needed for hyperref compatibility with the \addcontensline command
+\addcontentsline{faq}{questions}{#1} % Adds the question to the list of questions
+\todo[inline, color=green!40]{\textbf{#1}} % Uses the todonotes package to create a fancy box to put the question
+\vspace{1em} % White space after the question before the start of the answer
+}
+%%---------------------- Hide Bibliography Title
+\usepackage{etoolbox}
+\patchcmd{\thebibliography}{\chapter*{\bibname}}{}{}{}
+%%------------------------- Colors --------------------------%%
+
+
 
 
 
 \theoremstyle{plain}
-\newtheorem{thm}{Theorem}[section] % reset theorem numbering for each chapter
+\newtheorem{thm}{Theorem}[chapter] % reset theorem numbering for each chapter
 
 \theoremstyle{definition}
 \newtheorem{definicao}[thm]{Definição}
