+alguns da lista 0

--- a/common.sty
+++ b/common.sty
@@ -7,6 +7,10 @@
 \usepackage{hyperref}
 \usepackage{verbatim}
 
+% ------------- Cross-Reference ----------%
+
+\usepackage{xr}
+
 % ------------------ Math -------------------------%
 
 \usepackage{mathtools}
