--- a/listas.tex
+++ b/listas.tex
@@ -174,8 +174,8 @@ linear dos elementos de \(S\), então \(S\cup\{v\}\) é linearmente independente
 
 \solucao{Assuma que \(v\) é combinação linear dos elementos de \(S\). Neste caso
 existe \(S^\prime\subseteq S\) finito e uma função \(\alpha\colon S^\prime\to\Reals\) tal que 
-\(\sum_{s\in S^\prime}\alpha_s s=v\). Defina \(\bar{\alpha}\colon S^\prime\cup\{v\}\to\Reals\) tal que
-\(\bar{\alpha}_s=\alpha_s\) para cada \(s\in S^\prime\) e \(\bar{\alpha}_v=-1\). Então segue que \(\sum_{s\in S^\prime\cup\{v\}}\bar{\alpha}_ss=0.\) Isto é, \(S\cup\{v\}\) é L.D.
+\(\sum\limits_{s\in S^\prime}\alpha_s s=v\). Defina \(\bar{\alpha}\colon S^\prime\cup\{v\}\to\Reals\) tal que
+\(\bar{\alpha}_s=\alpha_s\) para cada \(s\in S^\prime\) e \(\bar{\alpha}_v=-1\). Então segue que \(\sum\limits_{s\in S^\prime\cup\{v\}}\bar{\alpha}_ss=0.\) Isto é, \(S\cup\{v\}\) é L.D.
 }
 
 \exercicio{9} Seja \(V\) um \(K\)-espaço vetorial de dimensão finita e sejam
@@ -1346,6 +1346,8 @@ Logo, temos que
 \[
 A^{2019} = \left(\frac{5^{2019} - 5}{6} + 1 \right)A + \frac{5^{2019} - 5}{6}
 \]
+
+\textcolor{Red}{Outra solução:} Diagonalizar
       }
    
     \exercicio{5}  Seja $V$ um espaço vetorial de dimensão finita e seja $T \colon V \to V$ um operador linear inversível. Prove que:
@@ -1368,7 +1370,14 @@ A^{2019} = \left(\frac{5^{2019} - 5}{6} + 1 \right)A + \frac{5^{2019} - 5}{6}
         T^{-1}(T(v)) = T^{-1}(\lambda v)\Rightarrow v = \lambda T^{-1}(v) \Rightarrow \lambda^{-1} v = \lambda^{-1} ( \lambda T^{-1}(v)) \Rightarrow T^{-1}(v) = \lambda^{-1} v
         \]
         Portanto, como $v \neq 0$ é tal que $T^{-1}(v) \lambda^{-1} v,$ temos que $\lambda^{-1}$ é autovalor de $T^{-1}.$ \\
-        $(\Leftarrow)$ Converse is the same
+        
+        $(\Leftarrow)$ Suponha que $\lambda^{-1}$ é um autovalor de $T^{-1}.$ Desse modo, para certo $v \neq 0,$ temos $T^{-1}(v) = \lambda^{-1}v.$ Daí:
+        \[
+        T(T^{-1}(v)) = T(\lambda^{-1}v) \Rightarrow v = \lambda^{-1} T(v) \Rightarrow \lambda v = \lambda (\lambda^{-1} T(v)) \Rightarrow T(v) = \lambda v.
+        \]
+       Portanto, como $v \neq 0$ é tal que $T(v) \lambda v,$ temos que $\lambda$ é autovalor de $T.$ 
+       
+               \task[\pers{c}] 
      }
       }
    
@@ -1383,7 +1392,48 @@ A^{2019} = \left(\frac{5^{2019} - 5}{6} + 1 \right)A + \frac{5^{2019} - 5}{6}
    
     \exercicio{8} Seja $A \in \mathcal{M}_{n \times 1}(K).$ A matriz $AA^t$ é diagonalizável?
     
-        \solucao{}
+        \solucao{Não necessariamente, pois $AA^t$ pode ser nilpotente mas não nula.
+        
+        De fato, se $A \neq 0,$ então a matriz de posto $1$ $AA^t$ é nilpotente se e somente se seu índice de nilpotência é $2.$ Daí,
+        \[
+        (AA^t)^2 = 0 \Rightarrow A(A^tA)A^t = 0 \Rightarrow (A^tA)  \cdot (AA^t) = 0
+        \]
+        Logo, $AA^t$ é nilpotente (e portanto, não diagonalizável) quando $A^tA = 0.$ Nessa situação, temos que $AA^t$ não é diagonalizável. 
+        
+        Um exemplo explícito é o seguinte: tome $K = \mathbb{C},$ e considere a matriz $A \in \mathcal{M}_{n \times 1}(\mathbb{C})$ dada por
+        \[
+        A = \begin{pmatrix}
+        1 \\
+        i
+        \end{pmatrix}.
+        \]
+        Temos então que
+        \[
+        AA^t = \begin{pmatrix}
+        1 \\
+        i
+        \end{pmatrix}\begin{pmatrix}
+        1 &
+        i
+        \end{pmatrix} = \begin{pmatrix}
+        1 & i \\
+        i & -1
+        \end{pmatrix} 
+        \]
+        Verifiquemos que esta matriz não é diagonalizável.\footnote{Sabemos que esta é uma matriz nilpotente de ordem $2,$ logo não é diagonalizável, mas vamos fazer as contas mesmo assim para fins didáticos.} O polinômio característico de $B = AA^t$ é
+        \[
+        p_B(\lambda) = \det(AA^t - \lambda I) \Rightarrow p_B(\lambda) = \det \left( \begin{pmatrix}
+        1 & i \\
+        i & -1
+        \end{pmatrix}  - \begin{pmatrix}
+        \lambda & 0 \\
+        0 & \lambda
+        \end{pmatrix}  \right) \Rightarrow \]\[p_B(\lambda) = \det  \begin{pmatrix}
+        1-\lambda & i \\
+        i & -1-\lambda
+        \end{pmatrix}  \Rightarrow p_B(\lambda) = -(1-\lambda)(1+\lambda) - i^2 \Rightarrow p_B(\lambda) = \lambda^2  
+        \]
+        }
    
     \exercicio{9} Sejam $A, B \in \mathcal{M}_n(K).$ Prove que se $I - AB$ é inversível, então $I - BA$ é inversível e que \[
     (I - BA)^{-1} = I + B(I-AB)^{-1}A.
@@ -1419,7 +1469,21 @@ Como visto, temos que $(1 - ab)^{-1} = a(1-ba)^{-1}b+1.$}
     \exercicio{10}  Sejam $A, B \in \mathcal{M}_n(K).$ Prove que $AB$ e $BA$ têm os mesmos autovalores em $K.$ Elas têm o
 mesmo polinômio característico? E o minimal?
 
-       \solucao{}
+       \solucao{ Se $AB$ e $BA$ satisfazem a mesma equação característica, então eles irão possuir os mesmos autovalores. Vamos então mostrar que $AB$ e $BA$ têm o mesmo polinômio característico. Temos:
+%       \[\begin{array}[ccc]
+%       p_{AB}(\lambda) & = & \det(AB - \lambda I) \\
+%       &=& \det( AB \textcolor{Mulberry}{AA^{-1}} - \lambda I  \textcolor{Mulberry}{AA^{-1}} \\
+%       &=& \det(A(BA - \lambda I)A^{-1}) \\
+%       &=& \det(A) \det(BA - \lambda I) \textcolor{Cerulean}{\det(A^{-1})} \\
+%       &=&  \det(A) \det(BA - \lambda I) \textcolor{Cerulean}{\frac{1}{\det(A)}} \\
+%       &=& \det(BA - \lambda I) \\
+%       &=& p_{BA} (\lambda)
+%       \end{array}       \]
+       Logo, $AB$ e $BA$ possuem o mesmo polinômio característico, e portanto os mesmos autovalores. 
+       
+       Vejamos que o mesmo não ocorre com o poinômio minimal.
+       %https://math.stackexchange.com/questions/311342/do-ab-and-ba-have-same-minimal-and-characteristic-polynomials?noredirect=1&lq=1
+       }
    
     \exercicio{11} Seja $A \in \mathcal{M}_n(K)$ uma matriz diagonalizável. Mostre que $A^r$ é diagonalizável para todo inteiro $r \ge 1.$ Exiba uma matriz \emph{não diagonalizável} tal que $A^2$ é diagonalizável.
     
@@ -1657,7 +1721,7 @@ Prove que se $A$ é diagonalizável então $T_A$ é diagonalizável.
   \textbf{\textcolor{Red}{Questões Suplementares}}
 
 
-\exercicio{31} 
+\exercicio{31} (O Teorema de Gershgorin)%https://en.wikipedia.org/wiki/Gershgorin_circle_theorem
 
 \newpage
 \section{\textcolor{Floresta}{Lista 3}}
