--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 \newpage
 \tableofcontents
 \newpage
-\chapter*{Infromações da Disciplina}
+\chapter*{Informações da Disciplina}
 \label{sec:intro}
 \addcontentsline{toc}{section}{\nameref{sec:intro}}
 \question{Informações Básicas}\label{new-question}
