--- a/main.tex
+++ b/main.tex
@@ -719,7 +719,7 @@ Seja $V$ um espaço vetorial e $V^r=V\times\dots\times V$. Uma \textbf{forma $r$
 \[
 F:V^r\rightarrow K,\quad\quad (v_i)_{i\in r}\mapsto F((v_i)_{i\in r})\in K
 \]
-que é linear em cada argumento, ou seja, para $i\in r$ temos:
+que é linear em cada argumento, ou seja, para cada $i\in r$ temos que
 \[
 F(v_0,\dots,\alpha v_i+\beta v'_i,\dots,v_{r-1})=\alpha F(v_0,\dots,v_i,\dots,v_{r-1})+\beta F(v_0,\dots,v'_i,\dots,v_{r-1}).
 \]
